--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "node index.js"
   },
   "keywords": [],
-  "author": "Lambda School",
+  "author": "Tyler Gilchrist",
   "dependencies": {
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
