--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   "keywords": [],
   "author": "Tyler Gilchrist",
   "dependencies": {
-    "dotenv": "^8.1.0",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "helmet": "^3.21.1",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.19.4",
     "sqlite3": "^4.1.0"
   },
   "devDependencies": {
-    "cross-env": "^6.0.0",
+    "cross-env": "^6.0.3",
     "jest": "^24.9.0",
     "nodemon": "^1.19.2",
     "supertest": "^4.0.2"
